# llm-shakespear-wordclouds

./: README.md  pyproject.toml
src/llm_shakespear_wordclouds/: __init__.py  embedding.py  read_shakespear.py
src/llm_shakespear_wordclouds/data/: README.md
