[project]
name = "llm-shakespear-wordclouds"
version = "0.1.0"
description = "Generate wordclouds using LLM for thematic colouring/categorization"
readme = "README.md"
authors = [
    { name = "alexcolemandata", email = "coleman.g.alex@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "numpy>=2.2.3",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "rich>=13.9.4",
]

[project.scripts]
llm-shakespear-wordclouds = "llm_shakespear_wordclouds:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.27.1",
    "ipdb>=0.13.13",
    "ipython>=8.32.0",
    "pdbpp>=0.10.3",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
